Added New Endpoint GetMPBySchoolURN (#627)
* Added New Endpoint GetMPBySchoolURN
